--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -497,7 +497,7 @@
                                             <outlet property="collectionView" destination="mdD-Rk-eaa" id="rMh-tu-a0z"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXOriginDynamicCell" rowHeight="197" id="D6q-fZ-bGf" customClass="ZXOriginDynamicCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ZXOriginDynamicCell" rowHeight="197" id="D6q-fZ-bGf" customClass="ZXOriginDynamicCell">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="D6q-fZ-bGf" id="LX9-Mj-IMo">
@@ -1482,7 +1482,7 @@
         <!--Add Mail View Controller-->
         <scene sceneID="Xbm-eN-7uX">
             <objects>
-                <viewController storyboardIdentifier="ZXAddMailViewController" id="tLV-E0-iXt" customClass="ZXAddMailViewController" propertyAccessControl="all" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ZXAddMailViewController" id="tLV-E0-iXt" customClass="ZXAddMailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="kq0-Mq-AKs"/>
                         <viewControllerLayoutGuide type="bottom" id="xWS-nM-UUZ"/>
@@ -1814,6 +1814,137 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VZw-2a-ZIE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3740" y="1030"/>
+        </scene>
+        <!--Repost View Controller-->
+        <scene sceneID="den-cM-jmk">
+            <objects>
+                <viewController storyboardIdentifier="ZXRepostViewController" id="fue-gi-lOh" customClass="ZXRepostViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9Fr-GB-Tuq"/>
+                        <viewControllerLayoutGuide type="bottom" id="L3c-zN-uL9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kOa-1L-qy7">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0hw-5C-0iN">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="156"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rna-L1-L9O">
+                                        <rect key="frame" x="8" y="126" width="22" height="22"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="22" id="Gb2-s6-wun"/>
+                                            <constraint firstAttribute="width" constant="22" id="jhO-jE-5bg"/>
+                                        </constraints>
+                                        <state key="normal" image="bt_emoji">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="emojiAction:" destination="fue-gi-lOh" eventType="touchUpInside" id="Put-qR-LUZ"/>
+                                        </connections>
+                                    </button>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ns-WE-I8r" customClass="UIPlaceHolderTextView">
+                                        <rect key="frame" x="8" y="8" width="584" height="110"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="fue-gi-lOh" id="l6p-2H-aiZ"/>
+                                        </connections>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Rna-L1-L9O" firstAttribute="leading" secondItem="0hw-5C-0iN" secondAttribute="leading" constant="8" id="AZC-73-1VY"/>
+                                    <constraint firstAttribute="trailing" secondItem="2Ns-WE-I8r" secondAttribute="trailing" constant="8" id="HjV-Un-fhd"/>
+                                    <constraint firstItem="2Ns-WE-I8r" firstAttribute="top" secondItem="0hw-5C-0iN" secondAttribute="top" constant="8" id="IWe-Bh-xxE"/>
+                                    <constraint firstAttribute="height" constant="156" id="NHu-qX-pvI"/>
+                                    <constraint firstAttribute="bottom" secondItem="Rna-L1-L9O" secondAttribute="bottom" constant="8" id="ZQR-7G-mbZ"/>
+                                    <constraint firstItem="2Ns-WE-I8r" firstAttribute="leading" secondItem="0hw-5C-0iN" secondAttribute="leading" constant="8" id="jD2-e0-7r8"/>
+                                    <constraint firstItem="Rna-L1-L9O" firstAttribute="top" secondItem="2Ns-WE-I8r" secondAttribute="bottom" constant="8" id="ldC-d8-7FJ"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fdp-gZ-4ne" customClass="ZXEmojiPicker">
+                                <rect key="frame" x="0.0" y="600" width="600" height="216"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ez5-qD-bXb">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="216"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nJx-Ue-dVO">
+                                            <size key="itemSize" width="50" height="50"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="YXo-gZ-ngN" customClass="ZXBaseCollectionViewCell">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="48W-Bq-D7H">
+                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                </view>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailingMargin" secondItem="48W-Bq-D7H" secondAttribute="trailing" constant="-8" id="BB4-Dn-mk1"/>
+                                                    <constraint firstItem="48W-Bq-D7H" firstAttribute="leading" secondItem="YXo-gZ-ngN" secondAttribute="leadingMargin" constant="-8" id="aj4-7T-7E5"/>
+                                                    <constraint firstAttribute="bottomMargin" secondItem="48W-Bq-D7H" secondAttribute="bottom" constant="-8" id="hTT-Nu-Nee"/>
+                                                    <constraint firstItem="48W-Bq-D7H" firstAttribute="top" secondItem="YXo-gZ-ngN" secondAttribute="topMargin" constant="-8" id="x7n-fN-2gj"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outlet property="imageView" destination="48W-Bq-D7H" id="QuB-Yk-wPs"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
+                                        <connections>
+                                            <outlet property="dataSource" destination="fdp-gZ-4ne" id="JqT-g6-DcZ"/>
+                                            <outlet property="delegate" destination="fdp-gZ-4ne" id="drN-af-HfQ"/>
+                                        </connections>
+                                    </collectionView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="216" id="7JV-Yf-6Pj"/>
+                                    <constraint firstAttribute="trailing" secondItem="ez5-qD-bXb" secondAttribute="trailing" id="Ktq-il-QA0"/>
+                                    <constraint firstItem="ez5-qD-bXb" firstAttribute="top" secondItem="fdp-gZ-4ne" secondAttribute="top" id="UaY-d5-dwq"/>
+                                    <constraint firstItem="ez5-qD-bXb" firstAttribute="leading" secondItem="fdp-gZ-4ne" secondAttribute="leading" id="ZNw-H5-pOB"/>
+                                    <constraint firstAttribute="bottom" secondItem="ez5-qD-bXb" secondAttribute="bottom" id="gDi-nT-nzL"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="collectionView" destination="ez5-qD-bXb" id="NPd-eU-oB7"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="0hw-5C-0iN" secondAttribute="trailing" constant="-16" id="0TQ-RZ-elL"/>
+                            <constraint firstItem="fdp-gZ-4ne" firstAttribute="top" secondItem="L3c-zN-uL9" secondAttribute="bottom" id="BGZ-5y-bif"/>
+                            <constraint firstItem="L3c-zN-uL9" firstAttribute="top" secondItem="fdp-gZ-4ne" secondAttribute="bottom" constant="84" id="DDH-Vn-hBX"/>
+                            <constraint firstItem="0hw-5C-0iN" firstAttribute="leading" secondItem="kOa-1L-qy7" secondAttribute="leadingMargin" constant="-16" id="JVI-Qb-1WI"/>
+                            <constraint firstItem="0hw-5C-0iN" firstAttribute="top" secondItem="kOa-1L-qy7" secondAttribute="topMargin" id="SU7-YO-kK5"/>
+                            <constraint firstItem="fdp-gZ-4ne" firstAttribute="leading" secondItem="kOa-1L-qy7" secondAttribute="leadingMargin" constant="-16" id="hlb-dv-UjZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fdp-gZ-4ne" secondAttribute="trailing" constant="-16" id="yE5-HV-KhH"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="DDH-Vn-hBX"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="emojiButton" destination="Rna-L1-L9O" id="gBI-3O-whL"/>
+                        <outlet property="emojiPicker" destination="fdp-gZ-4ne" id="iCT-wf-S6E"/>
+                        <outlet property="textView" destination="2Ns-WE-I8r" id="BDq-y2-LyW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KhE-s9-3fh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3757" y="-300"/>
         </scene>
     </scenes>
     <resources>
