--- a/Aier360/Controllers/发现/Discovery.storyboard
+++ b/Aier360/Controllers/发现/Discovery.storyboard
@@ -3,35 +3,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
-        <scene sceneID="0bP-lG-SpM">
-            <objects>
-                <tableViewController id="9Er-7r-X3Q" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="9DW-Uv-SP9">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ptZ-ii-sv4">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ptZ-ii-sv4" id="65c-28-iab">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="9Er-7r-X3Q" id="loh-0g-UDO"/>
-                            <outlet property="delegate" destination="9Er-7r-X3Q" id="3tM-KG-Qz6"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="ldo-Kp-wdA"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3MK-BH-hrc" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="781" y="371"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="4cG-U9-CgD">
             <objects>
@@ -43,12 +17,92 @@
                         <color key="barTintColor" red="0.1019607843" green="0.1176470588" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="9Er-7r-X3Q" kind="relationship" relationship="rootViewController" id="Tvw-5Y-LfL"/>
+                        <segue destination="Uyj-Ou-RRt" kind="relationship" relationship="rootViewController" id="dvS-hB-pvz"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nZa-ap-pdp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-39" y="371"/>
         </scene>
+        <!--Discovery View Controller-->
+        <scene sceneID="EGa-Bk-nJO">
+            <objects>
+                <viewController storyboardIdentifier="ZXDiscoveryViewController" id="Uyj-Ou-RRt" customClass="ZXDiscoveryViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="je1-4l-Pjf"/>
+                        <viewControllerLayoutGuide type="bottom" id="5ef-7b-kCB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9Ve-Ue-6Ux">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hCS-4M-auh">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" id="8QI-y8-wQo" customClass="ZXMenuCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8QI-y8-wQo" id="uDX-oB-9Rg">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="班级动态" translatesAutoresizingMaskIntoConstraints="NO" id="TLB-F0-oPD">
+                                                    <rect key="frame" x="15" y="8" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="ocR-rp-pK0"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="好友动态" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2d-kJ-eTI">
+                                                    <rect key="frame" x="53" y="13" width="506" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="1eZ-h4-BCt"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="TLB-F0-oPD" secondAttribute="bottom" constant="-3" id="5WA-bk-SuD"/>
+                                                <constraint firstItem="g2d-kJ-eTI" firstAttribute="leading" secondItem="TLB-F0-oPD" secondAttribute="trailing" constant="8" id="UA6-vZ-Y4w"/>
+                                                <constraint firstItem="g2d-kJ-eTI" firstAttribute="trailing" secondItem="uDX-oB-9Rg" secondAttribute="trailingMargin" id="ey1-8K-aUc"/>
+                                                <constraint firstItem="TLB-F0-oPD" firstAttribute="top" secondItem="uDX-oB-9Rg" secondAttribute="topMargin" id="hOo-Oq-gzu"/>
+                                                <constraint firstItem="g2d-kJ-eTI" firstAttribute="top" secondItem="uDX-oB-9Rg" secondAttribute="topMargin" constant="5" id="nRT-FO-VR4"/>
+                                                <constraint firstItem="TLB-F0-oPD" firstAttribute="leading" secondItem="uDX-oB-9Rg" secondAttribute="leadingMargin" constant="7" id="sMZ-Au-0vG"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <inset key="separatorInset" minX="45" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <connections>
+                                            <outlet property="logoImage" destination="TLB-F0-oPD" id="GSP-8K-0Mw"/>
+                                            <outlet property="titleLabel" destination="g2d-kJ-eTI" id="e0b-y5-O69"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Uyj-Ou-RRt" id="hiR-V0-EhR"/>
+                                    <outlet property="delegate" destination="Uyj-Ou-RRt" id="IOC-NY-f5X"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hCS-4M-auh" firstAttribute="leading" secondItem="9Ve-Ue-6Ux" secondAttribute="leadingMargin" constant="-16" id="3Hg-Ed-dvk"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hCS-4M-auh" secondAttribute="trailing" constant="-16" id="5d2-Mw-A3x"/>
+                            <constraint firstItem="hCS-4M-auh" firstAttribute="top" secondItem="je1-4l-Pjf" secondAttribute="bottom" id="VwM-d6-AEI"/>
+                            <constraint firstItem="5ef-7b-kCB" firstAttribute="top" secondItem="hCS-4M-auh" secondAttribute="bottom" id="e08-HK-OLe"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="4Ps-g2-Bca"/>
+                    <connections>
+                        <outlet property="tableView" destination="hCS-4M-auh" id="Ghz-zf-fO3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hhd-0k-WEG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="608" y="372"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="班级动态" width="29" height="29"/>
+    </resources>
 </document>
