--- a/Aier360/Controllers/校园/亲子任务/Homework.storyboard
+++ b/Aier360/Controllers/校园/亲子任务/Homework.storyboard
@@ -1054,7 +1054,7 @@
                                         </connections>
                                     </button>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="发布评论" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N2r-xq-mL1">
-                                        <rect key="frame" x="45" y="7" width="486" height="30"/>
+                                        <rect key="frame" x="79" y="7" width="452" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="c4m-zJ-HVW"/>
                                         </constraints>
@@ -1078,16 +1078,31 @@
                                             <action selector="commentAction:" destination="zVq-cO-ZzF" eventType="touchUpInside" id="lcn-Cm-ibt"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jN4-5c-Tr6">
+                                        <rect key="frame" x="45" y="10" width="26" height="23"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="26" id="LFX-Sa-Ddz"/>
+                                            <constraint firstAttribute="height" constant="23" id="fhY-Fs-nQ3"/>
+                                        </constraints>
+                                        <state key="normal" image="bt_camera">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="showPicker:" destination="zVq-cO-ZzF" eventType="touchUpInside" id="an9-It-QZT"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="ej1-fG-f49" firstAttribute="leading" secondItem="mIo-44-wD1" secondAttribute="leading" constant="15" id="08C-Nv-yGk"/>
-                                    <constraint firstItem="N2r-xq-mL1" firstAttribute="leading" secondItem="ej1-fG-f49" secondAttribute="trailing" constant="8" id="5KV-Wc-NeD"/>
+                                    <constraint firstItem="N2r-xq-mL1" firstAttribute="leading" secondItem="jN4-5c-Tr6" secondAttribute="trailing" constant="8" id="6Un-8h-jeQ"/>
+                                    <constraint firstItem="jN4-5c-Tr6" firstAttribute="leading" secondItem="ej1-fG-f49" secondAttribute="trailing" constant="8" id="6kb-lK-trj"/>
                                     <constraint firstItem="ChZ-He-N91" firstAttribute="top" secondItem="mIo-44-wD1" secondAttribute="top" constant="7" id="EpJ-Dk-zSy"/>
                                     <constraint firstItem="ej1-fG-f49" firstAttribute="top" secondItem="mIo-44-wD1" secondAttribute="top" constant="11" id="ImT-RB-tyb"/>
                                     <constraint firstAttribute="height" constant="44" id="fF8-5Q-B7m"/>
                                     <constraint firstItem="ChZ-He-N91" firstAttribute="leading" secondItem="N2r-xq-mL1" secondAttribute="trailing" constant="8" id="hKG-aV-UhB"/>
                                     <constraint firstAttribute="trailing" secondItem="ChZ-He-N91" secondAttribute="trailing" constant="15" id="hMw-XR-LnF"/>
+                                    <constraint firstItem="jN4-5c-Tr6" firstAttribute="top" secondItem="mIo-44-wD1" secondAttribute="top" constant="10" id="khd-yZ-QcA"/>
                                     <constraint firstItem="N2r-xq-mL1" firstAttribute="top" secondItem="mIo-44-wD1" secondAttribute="top" constant="7" id="lO5-Y5-GFC"/>
                                     <constraint firstAttribute="width" constant="600" id="yON-IN-Xx0"/>
                                 </constraints>
@@ -1108,6 +1123,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cameraButton" destination="jN4-5c-Tr6" id="qEh-OS-Pec"/>
                         <outlet property="commentTextField" destination="N2r-xq-mL1" id="1ND-2M-uHy"/>
                         <outlet property="emojiButton" destination="ej1-fG-f49" id="Q17-RN-Bbi"/>
                         <outlet property="emojiPicker" destination="yRp-BY-5vI" id="a4Y-O3-X0P"/>
@@ -1122,6 +1138,7 @@
     </scenes>
     <resources>
         <image name="arrow_right" width="8" height="12"/>
+        <image name="bt_camera" width="26" height="23"/>
         <image name="bt_emoji" width="22" height="22"/>
         <image name="checkmark_n" width="16" height="16"/>
         <image name="checkmark_s" width="16" height="16"/>
