--- a/Aier360/Views/ZXFoodTitleView.xib
+++ b/Aier360/Views/ZXFoodTitleView.xib
@@ -24,10 +24,10 @@
                     </state>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="food_released" translatesAutoresizingMaskIntoConstraints="NO" id="ZcR-ZM-6dA">
-                    <rect key="frame" x="511" y="42" width="56" height="39"/>
+                    <rect key="frame" x="50" y="50" width="90" height="50"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="39" id="LgA-ve-IvY"/>
-                        <constraint firstAttribute="width" constant="56" id="h8J-if-Plg"/>
+                        <constraint firstAttribute="height" constant="50" id="F7D-3t-4ab"/>
+                        <constraint firstAttribute="width" constant="90" id="pKX-Ez-TJj"/>
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bwZ-zu-rWQ">
@@ -44,27 +44,60 @@
                         <action selector="editFood:" destination="-2" eventType="touchUpInside" id="TTQ-NE-7p7"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5YL-2D-cAy">
+                    <rect key="frame" x="500" y="24" width="46" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="kDv-C5-819"/>
+                        <constraint firstAttribute="width" constant="46" id="o5B-GL-9go"/>
+                    </constraints>
+                    <state key="normal" title="删除">
+                        <color key="titleColor" red="0.98039215690000003" green="0.41960784309999999" blue="0.078431372550000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="deleteFood:" destination="-2" eventType="touchUpInside" id="Xay-gX-ugo"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uga-8U-iCg">
+                    <rect key="frame" x="546" y="10" width="44" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="44" id="0LD-Gg-e5B"/>
+                        <constraint firstAttribute="height" constant="44" id="F4u-jP-PDS"/>
+                    </constraints>
+                    <state key="normal" image="placeholder">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="lookImage:" destination="-2" eventType="touchUpInside" id="Iz8-3T-hgW"/>
+                    </connections>
+                </button>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="ZcR-ZM-6dA" secondAttribute="trailing" constant="33" id="A0k-Wd-zVs"/>
+                <constraint firstAttribute="trailing" secondItem="Uga-8U-iCg" secondAttribute="trailing" constant="10" id="6yz-fP-TVo"/>
                 <constraint firstAttribute="trailing" secondItem="bwZ-zu-rWQ" secondAttribute="trailing" constant="8" id="FJ7-uL-Hqe"/>
-                <constraint firstItem="ZcR-ZM-6dA" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="42" id="H7B-Lx-bCG"/>
+                <constraint firstItem="ZcR-ZM-6dA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="JrS-q1-r0W"/>
                 <constraint firstAttribute="centerX" secondItem="y6o-3e-Vf9" secondAttribute="centerX" id="Nci-AW-FlT"/>
+                <constraint firstAttribute="bottom" secondItem="5YL-2D-cAy" secondAttribute="bottom" constant="10" id="S4V-Bk-Mqm"/>
+                <constraint firstItem="ZcR-ZM-6dA" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="50" id="bT8-i2-qd0"/>
                 <constraint firstAttribute="centerY" secondItem="y6o-3e-Vf9" secondAttribute="centerY" id="gci-2S-coc"/>
                 <constraint firstAttribute="bottom" secondItem="bwZ-zu-rWQ" secondAttribute="bottom" constant="10" id="h2J-AS-b9S"/>
+                <constraint firstAttribute="bottom" secondItem="Uga-8U-iCg" secondAttribute="bottom" constant="10" id="pBh-vq-3sX"/>
+                <constraint firstItem="bwZ-zu-rWQ" firstAttribute="leading" secondItem="5YL-2D-cAy" secondAttribute="trailing" id="xJN-eg-ezh"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="deleteButton" destination="5YL-2D-cAy" id="JQl-fr-y0m"/>
                 <outlet property="editButton" destination="bwZ-zu-rWQ" id="9Pm-ve-GDR"/>
+                <outlet property="imageButton" destination="Uga-8U-iCg" id="6wc-Fc-VFD"/>
                 <outlet property="releasedImage" destination="ZcR-ZM-6dA" id="8o9-ga-KTh"/>
                 <outlet property="timeButton" destination="y6o-3e-Vf9" id="BMH-ww-9Rg"/>
             </connections>
         </view>
     </objects>
     <resources>
-        <image name="food_released" width="56" height="39"/>
+        <image name="food_released" width="90" height="50"/>
+        <image name="placeholder" width="75" height="75"/>
         <image name="time_bg" width="110" height="22"/>
     </resources>
 </document>
